--- a/styles/global.css
+++ b/styles/global.css
@@ -1,8 +1,53 @@
+html {
+  min-height: 100%;
+  margin: 0;
+}
 body {
-  color: red;
+  margin: 20px;
+  background: radial-gradient(
+    circle at 0% 0.5%,
+    rgb(241, 241, 242) 0.1%,
+    rgb(224, 226, 228) 100.2%
+  );
+  display: flex;
+  justify-content: center;
+  font-size: 1em;
+  font-family: "Lucida Console", "Courier New", monospace;
+  line-height: 1.3;
 }
 
-.block {
-  color: red;
-  font-size: 20px;
+.container {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0 0 10px rgba(241, 245, 252, 0.76);
+  border-radius: 15px;
+  padding: 20px;
+}
+
+.response-text {
+}
+
+.falling-image {
+  animation: move 2s linear forwards;
+}
+
+.cursor {
+  animation: blinker 0.5s step-start infinite;
+}
+
+@keyframes move {
+  from {
+    bottom: 200px;
+  }
+  to {
+    bottom: 0;
+  }
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
