--- a/styles/global.css
+++ b/styles/global.css
@@ -7,42 +7,71 @@ body {
   background: radial-gradient(
     circle at 0% 0.5%,
     rgb(241, 241, 242) 0.1%,
-    rgb(224, 226, 228) 100.2%
+    rgb(119, 119, 119) 100.2%
   );
-  display: flex;
-  justify-content: center;
-  font-size: 1em;
-  font-family: "Lucida Console", "Courier New", monospace;
-  line-height: 1.3;
-}
-
-.container {
-  width: 35%;
+  /* background: rbg(241, 241, 242); */
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0 0 10px rgba(241, 245, 252, 0.76);
+  align-items: center;
+  font-size: 1em;
+  font-family: "Lucida Console", "Courier New", monospace;
+  line-height: 1.3;
+  overflow: hidden;
+  height: 100vh;
+}
+
+.container {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* box-shadow: 0 0 10px rgba(241, 245, 252, 0.76); */
+  /* box-shadow: 0 0 10px rgba(29, 185, 84, 1); */
   border-radius: 15px;
   padding: 20px;
+  z-index: 1;
 }
 
-.response-text {
+.title {
+  color: white;
+  width: fit-content;
 }
 
-.falling-image {
-  animation: move 2s linear forwards;
+.spotify {
+  color: #1db954 !important;
+  text-shadow: 0 0 10px rgba(24, 24, 24, 0.1);
 }
+
+/* .response-text {
+  width: 500px;
+} */
 
 .cursor {
   animation: blinker 0.5s step-start infinite;
 }
 
-@keyframes move {
-  from {
-    bottom: 200px;
+.falling-image {
+  position: absolute;
+  top: -40px;
+  animation: animate 5s linear forwards;
+  box-shadow: 0 0 10px rgba(119, 119, 119, 1);
+  z-index: -1;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
   }
-  to {
-    bottom: 0;
+
+  80% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(100vh);
+    opacity: 0;
   }
 }
 
