--- a/styles/global.css
+++ b/styles/global.css
@@ -1,15 +1,11 @@
 html {
   min-height: 100%;
   margin: 0;
+  overflow: scroll;
 }
 body {
   margin: 20px;
-  background: radial-gradient(
-    circle at 0% 0.5%,
-    rgb(241, 241, 242) 0.1%,
-    rgb(119, 119, 119) 100.2%
-  );
-  /* background: rbg(241, 241, 242); */
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,20 +13,19 @@ body {
   font-size: 1em;
   font-family: "Lucida Console", "Courier New", monospace;
   line-height: 1.3;
-  overflow: hidden;
-  height: 100vh;
+  overflow: scroll;
 }
 
 .container {
-  width: 30%;
+  max-height: 70vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  /* box-shadow: 0 0 10px rgba(241, 245, 252, 0.76); */
-  /* box-shadow: 0 0 10px rgba(29, 185, 84, 1); */
-  border-radius: 15px;
-  padding: 20px;
-  z-index: 1;
+  overflow: scroll;
+}
+
+.cursor {
+  animation: blinker 0.5s step-start infinite;
 }
 
 .title {
@@ -43,18 +38,10 @@ body {
   text-shadow: 0 0 10px rgba(24, 24, 24, 0.1);
 }
 
-/* .response-text {
-  width: 500px;
-} */
-
-.cursor {
-  animation: blinker 0.5s step-start infinite;
-}
-
 .falling-image {
   position: absolute;
   top: -40px;
-  animation: animate 5s linear forwards;
+  animation: animate 10s linear forwards;
   box-shadow: 0 0 10px rgba(119, 119, 119, 1);
   z-index: -1;
 }
