--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,7 @@
 html {
   min-height: 100%;
   margin: 0;
-  overflow: scroll;
+  overflow: hidden;
 }
 body {
   margin: 20px;
@@ -14,14 +14,20 @@ body {
   font-family: "Lucida Console", "Courier New", monospace;
   line-height: 1.3;
   overflow: scroll;
+  background: line  ar-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
 }
 
 .container {
   max-height: 70vh;
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   overflow: scroll;
+  /* background: rgba(0,0,0, 0.5); */
+  background: rgba(255, 255, 255, 0.75);
+  z-index: 1;
+  border-radius: 25px;
+  color: white;
 }
 
 .cursor {
@@ -40,8 +46,14 @@ body {
 
 .falling-image {
   position: absolute;
-  top: -40px;
+  /* top: -400px; */
   animation: animate 10s linear forwards;
+  box-shadow: 0 0 10px rgba(119, 119, 119, 1);
+  z-index: -1;
+}
+
+.static-image {
+  position: absolute;
   box-shadow: 0 0 10px rgba(119, 119, 119, 1);
   z-index: -1;
 }
