--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,12 @@
 html {
-  min-height: 100%;
+  height: 100%;
   margin: 0;
   overflow: hidden;
 }
 body {
   margin: 20px;
+  /* height: 100vh; */
+  min-height: 100%;
 
   display: flex;
   flex-direction: column;
@@ -15,19 +17,53 @@ body {
   line-height: 1.3;
   overflow: scroll;
   background: line  ar-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
+} 
+
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .container {
-  max-height: 70vh;
-  width: 80%;
+  /* max-height: 70vh; */
+  /* width: 80%; */
   display: flex;
   flex-direction: column;
   overflow: scroll;
   /* background: rgba(0,0,0, 0.5); */
-  background: rgba(255, 255, 255, 0.75);
+  /* background: rgba(255, 255, 255, 0.75); */
   z-index: 1;
-  border-radius: 25px;
-  color: white;
+  /* border-radius: 25px; */
+  /* color: white; */
+}
+
+
+.logos-slide {
+  display: inline-block;
+  animation: 15s slide infinite linear;
+  margin-top: auto;
+  /* max-height: 30vh; */
+  /* position: absolute;
+  bottom: 0px; */
+}
+.logos {
+  white-space: nowrap;
+  overflow: hidden;
+  padding: 10px 0;
+}
+
+.logos-slide img{
+  height: 100px;
+  margin: 0 20px;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0)
+  }
+  to {
+    transform: translateX(-100%)
+  }
 }
 
 .cursor {
@@ -52,11 +88,6 @@ body {
   z-index: -1;
 }
 
-.static-image {
-  position: absolute;
-  box-shadow: 0 0 10px rgba(119, 119, 119, 1);
-  z-index: -1;
-}
 
 @keyframes animate {
   0% {
