--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,47 @@
 html {
+  // can try deleting this and uncommening min-height from body if necessary
+  /* height: 100%; */
+}
+
+body {
+  margin: 0;
+  font-size: 1.125rem;
+  line-height: 1.6;
+  color: #333;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  /* min-height: 100%; */
+}
+
+.title {
+  margin: 0 0 0.5em;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-style: italic;
+  font-size: 3rem;
+  color: red;
+  line-height: 0.8;
+}
+
+.container {
+  padding: 3rem;
+}
+
+footer {
+  background: #333;
+  color: white;
+  padding: 3em;
+  margin-top: auto;
+}
+
+/* html {
   min-height: 100%;
   margin: 0;
   overflow: hidden;
 }
 body {
-  margin: 20px;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,7 +50,6 @@ body {
   font-family: "Lucida Console", "Courier New", monospace;
   line-height: 1.3;
   overflow: scroll;
-  background: line  ar-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
 }
 
 .container {
@@ -23,59 +58,17 @@ body {
   display: flex;
   flex-direction: column;
   overflow: scroll;
-  /* background: rgba(0,0,0, 0.5); */
   background: rgba(255, 255, 255, 0.75);
   z-index: 1;
   border-radius: 25px;
-  color: white;
-}
+} */
 
-.cursor {
+/* .cursor {
   animation: blinker 0.5s step-start infinite;
-}
-
-.title {
-  color: white;
-  width: fit-content;
-}
-
-.spotify {
-  color: #1db954 !important;
-  text-shadow: 0 0 10px rgba(24, 24, 24, 0.1);
-}
-
-.falling-image {
-  position: absolute;
-  /* top: -400px; */
-  animation: animate 10s linear forwards;
-  box-shadow: 0 0 10px rgba(119, 119, 119, 1);
-  z-index: -1;
-}
-
-.static-image {
-  position: absolute;
-  box-shadow: 0 0 10px rgba(119, 119, 119, 1);
-  z-index: -1;
-}
-
-@keyframes animate {
-  0% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-
-  80% {
-    opacity: 1;
-  }
-
-  100% {
-    transform: translateY(100vh);
-    opacity: 0;
-  }
 }
 
 @keyframes blinker {
   50% {
     opacity: 0;
   }
-}
+} */
