--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,7 @@
 html {
   // can try deleting this and uncommening min-height from body if necessary
   /* height: 100%; */
+  height: 100%;
 }
 
 body {
@@ -8,25 +9,45 @@ body {
   font-size: 1.125rem;
   line-height: 1.6;
   color: #333;
-  background: white;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  /* min-height: 100%; */
+  /* min-height: 100vh; */
+  height: 100vh;
+  /* background: #f7f7f7; */
+  /* background: rgb(225, 248, 230); */
+  background: radial-gradient(
+    at top,
+    rgba(225, 248, 230, 1) 0%,
+    rgba(247, 247, 247, 1) 100%
+  );
+  /* background: radial-gradient(
+    at bottom,
+    rgba(225, 248, 230, 1) 0%,
+    rgba(247, 247, 247, 1) 45%
+  ); */
 }
 
 .title {
+  text-align: center;
   margin: 0 0 0.5em;
   text-transform: uppercase;
   font-weight: 900;
-  font-style: italic;
   font-size: 3rem;
-  color: red;
+  color: #1db954;
   line-height: 0.8;
 }
 
 .container {
-  padding: 3rem;
+  padding: 3rem 5rem;
+  height: auto;
+  /* max-height: 70vh; */
+  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  color: #191414;
+  /* width: 80%; */
+  /* text-align: center; */
+  /* background: rgba(29, 185, 84, 0.1); */
 }
 
 footer {
@@ -132,7 +153,7 @@ body {
   border-radius: 25px;
 } */
 
-/* .cursor {
+.cursor {
   animation: blinker 0.5s step-start infinite;
 }
 
@@ -140,4 +161,4 @@ body {
   50% {
     opacity: 0;
   }
-} */
+}
