--- a/styles/global.css
+++ b/styles/global.css
@@ -1,17 +1,19 @@
 :root {
-  --spotify-green: #1DB954;
+  --spotify-green: #1db954;
   --spotify-black: #121212;
   --spotify-dark-gray: #282828;
-  --spotify-text: #FFFFFF;
+  --spotify-text: #ffffff;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
   background-color: var(--spotify-black);
   color: var(--spotify-text);
   height: 100%;
+  overflow: scroll;
 }
 
 .container {
@@ -31,6 +33,8 @@ main {
 .text-content {
   max-width: 90%;
   text-align: center;
+  padding-top: 2rem;
+  overflow: scroll;
 }
 
 p {
@@ -57,7 +61,6 @@ p {
   cursor: pointer;
   transition: all 0.3s ease;
   margin-top: 2rem;
-  
 }
 
 .enter-button:hover {
@@ -75,7 +78,7 @@ p {
 }
 
 .progress-bar::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -86,10 +89,13 @@ p {
 }
 
 @keyframes progress {
-  0% { left: -30%; }
-  100% { left: 100%; }
+  0% {
+    left: -30%;
+  }
+  100% {
+    left: 100%;
+  }
 }
-
 
 html {
   height: 100%;
@@ -149,21 +155,7 @@ footer {
   position: relative;
 }
 
-.logos:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 10%;
-  height: 100%;
-  background: linear-gradient(
-    to left,
-    rgba(255, 255, 255, 0),
-    rgba(255, 255, 255, 1)
-  );
-  content: "";
-  z-index: 2;
-}
-
+/* 
 .logos:before,
 .logos:after {
   position: absolute;
@@ -191,7 +183,7 @@ footer {
     rgba(255, 255, 255, 0),
     rgba(255, 255, 255, 1)
   );
-}
+} */
 
 .logos-slide {
   display: inline-block;
@@ -213,10 +205,9 @@ footer {
   }
 }
 
-
-
 .cursor {
   animation: blinker 0.5s step-start infinite;
+  color: var(--spotify-green);
 }
 
 @keyframes blinker {
