--- a/styles/global.css
+++ b/styles/global.css
@@ -40,9 +40,6 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  /* display: flex;
-  flex-direction: column;
-  color: #191414; */
 }
 .loading-container {
   display: flex;
@@ -50,31 +47,27 @@ body {
   margin: auto;
   padding: 0 40px;
   text-align: center;
-  /* height: 100%; */
 }
 
 .text-container {
   padding: 20px 20px;
+  text-align: center;
 }
 
 .intro {
-  /* max-width: 90%; */
   text-align: center;
-  /* padding-top: 2rem; */
   margin: auto;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   animation: fader 3s ease;
-  /* align-items: center; */
-  /* overflow: scroll; */
 }
 
 p {
   margin-bottom: 1.5rem;
-  font-size: 1.1rem;
-  line-height: 1.6;
+  /* font-size: 1.1rem; */
+  line-height: 1.4;
 }
 
 .highlight {
@@ -94,10 +87,7 @@ p {
   letter-spacing: 2px;
   cursor: pointer;
   transition: all 0.3s ease;
-  /* margin-top: 2rem; */
   margin: auto;
-  /* visibility: hidden; */
-  /* animation: fader 2s ease; */
 }
 
 .enter-button:hover {
