--- a/styles/playlists.css
+++ b/styles/playlists.css
@@ -83,20 +83,12 @@ h2 {
     position: relative;
 }
 
-.cover-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0.25rem;
-    padding: 0.25rem;
-    background-color: #282828;
-    border-radius: 0.375rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+.cover {
+    height: 100%;
+    width: 100%;
 }
 
-.cover-square {
-    aspect-ratio: 1;
-    border-radius: 0.125rem;
-}
+
 
 .selected-overlay {
     position: absolute;
