--- a/styles/response.css
+++ b/styles/response.css
@@ -42,10 +42,18 @@ h1 {
   height: auto;
 }
 
+.response {
+  margin: auto;
+}
+
 main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   padding: 1rem;
   padding-bottom: 5rem;
   flex-grow: 1;
+  align-items: center;
 }
 
 h2 {
@@ -95,6 +103,10 @@ h2 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+#rating-text {
+  text-align: center;
 }
 
 .selected-overlay {
@@ -177,4 +189,43 @@ footer {
 
 #gradeButton:not(:disabled):hover {
   background-color: #1ed760;
+}
+
+#star-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 0.5rem;
+  height: 48px;
+  width: 280px;
+  margin: 0 auto;
+}
+
+.star {
+  width: 48px;
+  height: 48px;
+  fill: #ccc;
+  transform: scale(0);
+  transition: transform 0.5s ease-out;
+  position: absolute;
+}
+
+.star.active {
+  fill: #ffd700;
+}
+
+.star.animate {
+  animation: popIn 0.5s ease-out forwards;
+}
+
+@keyframes popIn {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
