--- a/styles/test.css
+++ b/styles/test.css
@@ -30,16 +30,30 @@ h1 {
 }
 
 .user-avatar {
-  width: 2rem;
-  height: 2rem;
+  width: 3rem;
+  height: 3rem;
   background-color: #1db954;
   border-radius: 50%;
+  overflow: hidden;
+}
+
+.user-avatar img {
+  max-width: 100%;
+  height: auto;
+}
+
+.response {
+  margin: auto;
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   padding: 1rem;
   padding-bottom: 5rem;
   flex-grow: 1;
+  align-items: center;
 }
 
 h2 {
@@ -50,7 +64,7 @@ h2 {
 
 .playlist-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 50% 50%;
   gap: 1rem;
 }
 
@@ -89,6 +103,11 @@ h2 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+#rating-text {
+  text-align: center;
+  padding-bottom: 4rem;
 }
 
 .selected-overlay {
@@ -171,4 +190,45 @@ footer {
 
 #gradeButton:not(:disabled):hover {
   background-color: #1ed760;
+}
+
+#star-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 0.5rem;
+  height: 48px;
+  width: 280px;
+  margin: 0 auto;
+}
+
+.star {
+  width: 48px;
+  height: 48px;
+  fill: #ccc;
+  transform: scale(0);
+  transition: transform 0.5s ease-out;
+  display: none;
+  /* position: absolute; */
+}
+
+.star.active {
+  fill: #ffd700;
+  display: block !important;
+}
+
+.star.animate {
+  animation: popIn 0.5s ease-out forwards;
+}
+
+@keyframes popIn {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
