--- a/styles/test.css
+++ b/styles/test.css
@@ -43,7 +43,25 @@ h1 {
 }
 
 .response {
-  margin: auto;
+  margin: auto 20px;
+  height: 100%;
+  width: 100%;
+}
+
+.playlist-photo {
+  max-width: 100%;
+  aspect-ratio: 1;
+  margin-bottom: 1rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.375rem;
+  padding: 10px 30px;
+}
+
+.playlist-photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 main {
@@ -105,9 +123,9 @@ h2 {
   object-fit: cover;
 }
 
-#rating-text {
+.rating-text {
   text-align: center;
-  padding-bottom: 4rem;
+  padding-bottom: 1rem;
 }
 
 .selected-overlay {
