--- a/styles/response.css
+++ b/styles/response.css
@@ -73,7 +73,7 @@ h1 {
   flex-direction: column;
 }
 
-#avatar {
+.avatar {
   width: 3rem;
   height: 3rem;
   background-color: #1db954;
@@ -81,7 +81,7 @@ h1 {
   overflow: hidden;
 }
 
-.#avatar img {
+.avatar img {
   max-width: 100%;
   height: auto;
 }
