--- a/styles/global.css
+++ b/styles/global.css
@@ -19,6 +19,9 @@ main {
 }
 
 body {
+  max-width: 480px;
+  margin: 0 auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -40,6 +43,10 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px;
+}
+
+.container::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 .loading-container {
   display: flex;
